name:                yasal
version:             0.1.0.0
synopsis:            Yet Another Symbolic Algebra Library
-- description:
license:             MIT
license-file:        LICENSE
author:              Matthew Wade
maintainer:          mattie9875@hotmail.co.uk
-- copyright:
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable rtf
  main-is: Main.hs
  build-depends:       base >=4.7 && <4.8,
                       safe >=0.3 && <0.4,
                       containers >=0.5 && <0.6
  default-language:    Haskell2010
