name:                luna
version:             0.1.0.0
synopsis:            Interpreter for the Luna symbolic programming language
-- description:
license:             MIT
license-file:        LICENSE
author:              Matthew Wade
maintainer:          mattie9875@hotmail.co.uk
-- copyright:
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable Luna
  main-is: Main.hs
  build-depends:       base >=4.7 && <4.8,
                       safe >=0.3 && <0.4,
                       mtl >=2.2 && <2.3,
                       containers >=0.5 && <0.6,
                       text >=1.2 && <1.3,
                       parsec >=3.1 && <3.2
  default-language:    Haskell2010
